# poc-grid-network

./: .env  .gitignore  BLOCKCHAIN_CONVERSION_SUMMARY.md  CI_CD_IMPLEMENTATION_SUMMARY.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  Dockerfile  NEXT_STEPS_COMPLETED.md  README.md  TPS_TEST_VALIDATION.md  check-blockchain-sync.sh  complete-system-verification.sh  deploy.sh  docker-compose.test.yml  docker-compose.yml  health-check.sh  prepare-deployment.sh  run_tests.sh  test-p2p-trading.sh  test-system.sh  tps_full_test.sh  verify-database-schema.sh  verify-deployment.sh  verify-gridtokenx-rebrand.sh
.github/: copilot-instructions.md
.github/workflows/: README.md  ci-cd.yml  deploy.yml  security.yml  tps-performance.yml
config/: production.toml
docker/nginx/: nginx.conf
docker/nginx/ssl/: cert.pem  key.pem
docker/postgres/: init.sql
docker/prometheus/: prometheus.yml
docs/: API_BRIDGE.md  API_BRIDGE_GUIDE.md  API_BRIDGE_INTEGRATION.md  API_DOCUMENTATION.md  COMPREHENSIVE_TESTING_PLAN.md  CONTINUOUS_DOUBLE_AUCTION.md  CONTINUOUS_DOUBLE_AUCTION_IMPLEMENTATION.md  CRYPTOGRAPHIC_KEYS_AND_ACCOUNTS.md  CRYPTOGRAPHIC_KEY_MANAGEMENT.md  DATABASE_SCHEMA_UPDATE.md  DEPLOYMENT.md  POA_TECHNICAL_DOCUMENTATION.md  STEERING_DOCS.md  SYSTEM_DOCUMENT.md  TPS_TESTING.md  W1.md
docs/api/: README.md
examples/: account_manager_cli.rs  api_bridge.rs  api_bridge_example.rs  basic_usage.rs  continuous_double_auction.rs  crypto_bridge_client.rs  crypto_bridge_server.rs  crypto_key_management.rs  energy_trading.rs  key_concepts_demo.rs  key_manager_cli.rs  simple_test_server.rs  test_suite_examples.rs  tps_examples.rs
migrations/: 001_initial_schema.sql  002_comprehensive_schema_update.sql
src/: config.rs  lib.rs  main.rs  tps_benchmark.rs  tps_test.rs  types.rs  utils.rs
src/application/: enhanced_trading.rs  governance.rs  grid.rs  mod.rs  oracle.rs  trading.rs
src/blockchain/: consensus.rs  mod.rs  network.rs  node.rs  smart_contracts.rs  smart_contracts_backup.rs  storage.rs  transaction_pool.rs  transactions.rs  transactions_backup.rs
src/bridge/: crypto_bridge.rs  mod.rs
src/crypto/: mod.rs
src/infrastructure/: cloud.rs  database.rs  grid.rs  mod.rs  security.rs
src/interface/: api.rs  cda_api.rs  http_api.rs  mod.rs
src/runtime/: compliance.rs  continuous_double_auction.rs  energy_trading.rs  hybrid_arch.rs  mod.rs  token_system.rs
src/runtime/cda/: fees.rs  market_data.rs  matching.rs  mod.rs  orders.rs  types.rs
tests/: integration_tests.rs  mod.rs  simple_cda_tests.rs  tps_integration_tests.rs  types_tests.rs  utils_tests.rs
tests/fixtures/: test_data.rs
tests/helpers/: test_utils.rs
tests/unit/cda/: auction_engine_tests.rs  event_system_tests.rs  fee_calculation_tests.rs  market_data_tests.rs  mod.rs  order_manager_tests.rs
tests/unit/database/: connection_tests.rs  migration_tests.rs  mod.rs  order_persistence_tests.rs  trade_persistence_tests.rs
